tests/samples/negative/pointers/deref_void_pointer.ax
module deref_void_pointer;

fn bad() -> void {
    let pointer: *mut void = ptrat<*mut void>(0);
    return *pointer;
}

fn main() -> i32 {
    return 0;
}
